--- a/Gear2.html
+++ b/Gear2.html
@@ -42,11 +42,11 @@
             </div>
 
             <div class="mainInfo">
-                <div class="gear2Transform">
+                <div class="gearTransform">
                     <h2>Gear 2 Transformation</h2>
 
                     <a href="https://www.youtube.com/watch?v=yVX1yQqtDOw&ab_channel=Crunchyroll" target="_blank"><img
-                            id="gear2pic1"
+                            id="gearLeftPic"
                             src="\\wsl.localhost\Ubuntu\home\ashilly\aa-projects\OnePieceWebsite\Gear2.jpg"
                             alt="Gear 2 transformation"></a>
 
@@ -62,11 +62,11 @@
                         to lie on the floor.</p>
                 </div>
 
-                <div class="gear2attacks">
+                <div class="gearAttacks">
                     <h2>Gear 2 Attacks</h2>
 
                     <a href="\\wsl.localhost\Ubuntu\home\ashilly\aa-projects\OnePieceWebsite\gear2attack.webp"
-                        target="_blank"><img id="gear2pic2"
+                        target="_blank"><img id="gearRightPic"
                             src="\\wsl.localhost\Ubuntu\home\ashilly\aa-projects\OnePieceWebsite\gear2attack.webp"
                             alt="Gear 2 jet pistol gif"></a>
 
@@ -91,7 +91,7 @@
 
             <div class="botPicContainer">
                 <a href="\\wsl.localhost\Ubuntu\home\ashilly\aa-projects\OnePieceWebsite\gear2pic2.jpg"
-                    target="_blank"><img id="gear2pic3"
+                    target="_blank"><img id="gearBotPic"
                         src="\\wsl.localhost\Ubuntu\home\ashilly\aa-projects\OnePieceWebsite\gear2pic2.jpg"
                         alt="gear 2 cool pic"></a>
             </div>
